@@ -1,4 +1,4 @@
-# TODO: spectrogram should accept graphical pars like yaxp (to set tick marks) - but not supported by seewave::filled.contour.modif2; analyze - nFormants = 0 to skip LPC altogether; pitch editor - maybe two tools (one for adding, the other for deleting pitch candidates, like a big eraser - a quick way to remove false voiced segments); analyze() - option to skip analyzing loudness (set some existing par to NA), nFormants = 0 crashes; soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
+# TODO: pitch editor - maybe two tools (one for adding, the other for deleting pitch candidates, like a big eraser - a quick way to remove false voiced segments); analyze() - option to skip analyzing loudness (set some existing par to NA), nFormants = 0 crashes; soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
 #' @import stats graphics utils grDevices
 #' @encoding UTF-8
