@@ -41,10 +41,11 @@ not analyzed at all. NB: this number is dynamically updated: the actual
 silence threshold may be higher depending on the quietest frame, but it
 will never be lower than this specified number.}
 
-\item{scale}{maximum possible amplitude of input used for normalization (not
-needed for audio files)}
+\item{scale}{maximum possible amplitude of input used for normalization of
+input vector (not needed if input is an audio file)}
 
-\item{SPL_measured}{sound pressure level at which the sound is presented, dB}
+\item{SPL_measured}{sound pressure level at which the sound is presented, dB
+(set to 0 to skip analyzing subjective loudness)}
 
 \item{Pref}{reference pressure, Pa}
 
@@ -64,12 +65,14 @@ descriptives after discarding all info above \code{cutFreq}.
 Recommended if the original sampling rate varies across different analyzed
 audio files}
 
-\item{nFormants}{the number of formants to extract per STFT frame. Calls
-\code{\link[phonTools]{findformants}} with default settings}
+\item{nFormants}{the number of formants to extract per STFT frame (0 = no
+formant analysis). Calls \code{\link[phonTools]{findformants}} with default
+settings}
 
 \item{pitchMethods}{methods of pitch estimation to consider for determining
 pitch contour: 'autocor' = autocorrelation (~PRAAT), 'cep' = cepstral,
-'spec' = spectral (~BaNa), 'dom' = lowest dominant frequency band}
+'spec' = spectral (~BaNa), 'dom' = lowest dominant frequency band ('' or
+NULL = no pitch analysis)}
 
 \item{entropyThres}{pitch tracking is not performed for frames with Weiner
 entropy above \code{entropyThres}, but other spectral descriptives are
@@ -253,6 +256,14 @@ sound = soundgen(sylLen = 300, pitch = c(900, 400, 2300),
 a = analyze(sound, samplingRate = 16000, plot = TRUE)
 
 \dontrun{
+# For maximum processing speed (just basic spectral descriptives):
+a = analyze(sound, samplingRate = 16000,
+  plot = FALSE,         # no plotting
+  pitchMethods = NULL,  # no pitch tracking
+  SPL_measured = NULL,  # no loudness analysis
+  nFormants = 0         # no formant analysis
+)
+
 sound1 = soundgen(sylLen = 900, pitch = list(
   time = c(0, .3, .9, 1), value = c(300, 900, 400, 2300)),
   noise = list(time = c(0, 300), value = c(-40, 0)),
