@@ -356,10 +356,10 @@ a = analyze(
   s1, 
   samplingRate = 16000, plot = TRUE, ylim = c(0, 4), priorMean = NA,
   shortestSyl = 0, shortestPause = 0,  # any length of voiced fragments
-  interpolWin = NULL,     # don't interpolate missing f0 values
+  interpolWin = 0,        # don't interpolate missing f0 values
   pathfinding = 'none',   # don't look for optimal path through candidates
-  snakeStep = NULL,       # don't run the snake
-  smooth = NULL           # don't run median smoothing
+  snakeStep = 0,          # don't run the snake
+  smooth = 0              # don't run median smoothing
 )       
 ```
 
@@ -378,12 +378,12 @@ As an illustration, compare the output of the following two commands:
 par(mfrow = c(1, 2))
 a1 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .35, step = 25,
-             snakeStep = NULL, smooth = 0,
-             interpolWin = NULL, pathfinding = 'none',  # disable interpolation
+             snakeStep = 0, smooth = 0,
+             interpolWin = 0, pathfinding = 'none',  # disable interpolation
              main = 'No interpolation', showLegend = FALSE)
 a2 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .35, step = 25,
-             snakeStep = NULL, smooth = 0, 
+             snakeStep = 0, smooth = 0, 
              main = 'Interpolation', showLegend = FALSE)  
 
 par(mfrow = c(1, 1))
@@ -398,12 +398,12 @@ The next step after interpolation is pathfinding proper - searching for the opti
 par(mfrow = c(1, 2))
 a1 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .15, nCands = 3,
-             snakeStep = NULL, smooth = 0, interpolTol = Inf,
+             snakeStep = 0, smooth = 0, interpolTol = Inf,
              certWeight = 0,  # minimize pitch jumps
              main = 'Minimize jumps', showLegend = FALSE)  
 a2 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .15, nCands = 3,
-             snakeStep = NULL, smooth = 0, interpolTol = Inf,
+             snakeStep = 0, smooth = 0, interpolTol = Inf,
              certWeight = 1,  # minimize deviation from high-certainty candidates
              main = 'Pass through candidates', showLegend = FALSE)  
 par(mfrow = c(1, 1))
@@ -436,11 +436,11 @@ This smoothing can be applied to any measured value, not only the final pitch co
 par(mfrow = c(1, 2))
 a1 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .2, nCands = 2,
-             pathfinding = 'none', snakeStep = NULL, interpolTol = Inf,
+             pathfinding = 'none', snakeStep = 0, interpolTol = Inf,
              smooth = 0, main = 'No smoothing', showLegend = FALSE)
 a2 = analyze(s1, samplingRate = 16000, plotSpec = FALSE, priorMean = NA,
              pitchMethods = 'cep', cepThres = .2, nCands = 2,
-             pathfinding = 'none', snakeStep = NULL, interpolTol = Inf,
+             pathfinding = 'none', snakeStep = 0, interpolTol = Inf,
              smooth = 1, main = 'Default smoothing', showLegend = FALSE)
 par(mfrow = c(1, 1))
 ```
